--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>My favorite musician</h1>
     <p>Below is an image of a musician
         <img src="#" alt="">
+        <img src="" alt="">
     </p>
 </body>
 </html>
